Adelanto de formulario generico o dinamico.

--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -59,6 +59,7 @@
             </tbody>
         </table>
         <a class="btn btn-success btn-xs btn-block" th:href="@{/clientes/nuevo}">Crear nuevo cliente</a>
+        <a class="btn btn-danger btn-xs btn-block" th:href="@{/clientes/nuevoGenerado}">Crear nuevo cliente (generic form)</a>
     </main>
 
     <footer class="mastfoot mt-auto">
