--- a/src/main/resources/templates/nuevo.html
+++ b/src/main/resources/templates/nuevo.html
@@ -76,6 +76,12 @@
                                th:errorclass="is-invalid">
                         <div class="invalid-feedback" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
                     </div>
+                    <div class="mb-3"></div>
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" th:field="*{password}" class="form-control" id="password"
+                               th:errorclass="is-invalid">
+                 <div class="invalid-feedback" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+                    </div>
                     <button type="submit" class="btn btn-primary">Crear Cliente</button>
                 </form>
             </div>
