--- a/src/main/resources/templates/nuevo.html
+++ b/src/main/resources/templates/nuevo.html
@@ -24,20 +24,20 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="/">Gestión de Clientes</a>
+            <a class="navbar-brand" href="/">Gestión de Productos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Inicio</a>
+                        <a class="nav-link" href="/home">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/productos">Productos</a>
+                        <a class="nav-link active" href="/productos">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/clientes">Clientes</a>
+                        <a class="nav-link" href="/clientes">Clientes</a>
                     </li>
                 </ul>
             </div>
