funcion de autentificar (ver todos)

--- a/src/main/resources/templates/tienda/tienda.html
+++ b/src/main/resources/templates/tienda/tienda.html
@@ -101,7 +101,7 @@
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                         <div class="text-center"><a class="btn btn-outline-dark mt-auto"
-                                                    th:href="@{/tienda/cart/} + ${prods.id} + '/' + ${uid}">Add to
+                                                    th:href="@{/tienda/cart/} + ${uid} + '/' + ${prods.id}">Add to
                             cart</a></div>
                     </div>
                 </div>
