--- a/src/main/resources/templates/factura.html
+++ b/src/main/resources/templates/factura.html
@@ -67,8 +67,8 @@
 
     <h3 class="mb-3">Detalles de la Factura</h3>
     <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead class="table-primary">
+        <table class="table table-striped table-hover">
+            <thead class="table-light">
             <tr>
                 <th>Producto</th>
                 <th>Descripción</th>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a class="btn btn-primary" th:href="@{/facturas}">Descargar factura</a>
+            <button type="submit" id="printBtn" class="btn btn-primary">Descargar factura</button>
     </div>
 </div>
 
@@ -118,5 +118,10 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    document.getElementById("printBtn").addEventListener("click", function() {
+        window.print();
+    });
+</script>
 </body>
 </html>
