--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -77,6 +77,11 @@
                 <div class="login-container">
                     <h1>Inicio de Sesión</h1>
                     <form th:action="@{/login}" method="post">
+
+                        <div th:if="${param.error}" class="alert alert-danger">
+                            <span>Email o username invalido</span>
+                        </div>
+
                         <div class="mb-3">
                             <label for="username">Username:</label>
                             <input type="text" id="username" name="username" class="form-control" placeholder="Ingresa tu Email" required>            
